--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 # Generated from:
-# https://github.com/plone/meta/tree/master/config/default
+# https://github.com/plone/meta/tree/main/config/default
 # See the inline comments on how to expand/tweak this configuration file
 # python related
 *.egg-info
 *.pyc
 *.pyo
 
+# translation related
+*.mo
+
 # tools related
 build/
 .coverage
+.*project
 coverage.xml
 dist/
 docs/_build
@@ -16,6 +20,8 @@ __pycache__/
 .tox
 .vscode/
 node_modules/
+forest.dot
+forest.json
 
 # venv / buildout related
 bin/
@@ -31,6 +37,7 @@ lib64
 parts/
 pyvenv.cfg
 var/
+local.cfg
 
 # mxdev
 /instance/
@@ -40,6 +47,15 @@ var/
 /sources/
 /venv/
 .installed.txt
+
+report.html
+log.html
+output.xml
+robot_log.html
+robot_output.xml
+robot_report.html
+forest.dot
+forest.json
 .lock
 
 ##
