--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ target-version = ["py38"]
 ##
 
 [tool.codespell]
-ignore-words-list = "discreet,vew"
+ignore-words-list = "discreet,assertin,vew"
 skip = "*.po,*.min.js"
 ##
 # Add extra configuration options in .meta.toml:
@@ -121,8 +121,9 @@ Zope = [
   'Products.CMFCore', 'Products.CMFDynamicViewFTI',
 ]
 python-dateutil = ['dateutil']
-pytest-plone = ['pytest', 'plone.testing', 'plone.app.testing']
-ignore-packages = ['plone.app.iterate', 'plone.app.upgrade', 'plone.volto', 'zestreleaser.towncrier', 'zest.releaser', 'pytest-cov']
+pytest-plone = ['pytest', 'zope.pytestlayer', 'plone.testing', 'plone.app.testing']
+ignore-packages = ['plone.app.iterate', 'plone.app.upgrade', 'plone.volto', 'zestreleaser.towncrier', 'zest.releaser', 'pytest-cov','pytest']
+beautifulsoup4 = ['bs4']
 
 ##
 # Add extra configuration options in .meta.toml:
