--- a/tox.ini
+++ b/tox.ini
@@ -97,6 +97,7 @@ skip_install = false
 constrain_package_deps = True
 set_env =
     ROBOT_BROWSER=headlesschrome
+    zope_i18n_compile_mo_files=True
 
 ##
 # Specify extra test environment variables in .meta.toml:
@@ -140,6 +141,7 @@ skip_install = false
 constrain_package_deps = True
 set_env =
     ROBOT_BROWSER=headlesschrome
+    zope_i18n_compile_mo_files=True
 
 ##
 # Specify extra test environment variables in .meta.toml:
@@ -199,6 +201,7 @@ skip_install = false
 # otherwise we simply get the latest from PyPI, which may not work.
 constrain_package_deps = true
 set_env =
+    zope_i18n_compile_mo_files=True
 
 ##
 # Specify extra test environment variables in .meta.toml:
