--- a/.meta.toml
+++ b/.meta.toml
@@ -11,7 +11,7 @@ codespell_ignores = "vew"
 dependencies_mappings = [
   "beautifulsoup4 = ['bs4']",
 ]
-dependencies_ignores = "['plone.app.iterate', 'plone.app.upgrade', 'plone.volto', 'zestreleaser.towncrier', 'zest.releaser', 'pytest-cov','pytest', 'Products.Five']"
+dependencies_ignores = "['plone.app.iterate', 'plone.app.upgrade', 'plone.volto', 'zestreleaser.towncrier', 'zest.releaser', 'Products.Five']"
 
 [gitignore]
 extra_lines = """
@@ -35,12 +35,3 @@ test_environment_variables = """
 """
 
 
-[github]
-py_versions = "[\"3.12\", \"3.11\", \"3.10\"]"
-jobs = [
-    "qa",
-    "test",
-    "coverage",
-    "dependencies",
-    "release_ready",
-    ]
