--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,7 @@ include .editorconfig
 include *.txt
 include *.yml
 include *.md
+include package.json
 exclude .mrbob.ini
 exclude bobtemplate.cfg
 exclude *-mxdev.txt
