--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "static resources for collective.outputfilters.socialmediaconsent",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon --watch ./resources/ --ext js --exec \"npm run build\"",
+    "build": "uglifyjs ./resources/collective.outputfilters.socialmediaconsent.js --compress --mangle --warn --output ./src/collective/outputfilters/socialmediaconsent/browser/static/collective.outputfilters.socialmediaconsent.min.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/1letter/collective.outputfilters.socialmediaconsent/issues"
   },
-  "homepage": "https://github.com/1letter/collective.outputfilters.socialmediaconsent#readme"
+  "homepage": "https://github.com/1letter/collective.outputfilters.socialmediaconsent#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "uglify-js": "^3.19.3"
+  }
 }
